src/components/sbb-icon/sbb-icon.scss
@use '../../global/styles' as sbb;

// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin
@include sbb.host-component-properties;

:host {
  display: inline-block;
  line-height: 0;
  -webkit-tap-highlight-color: transparent;
}

:host([data-empty][data-namespace='default'][name$='-small']) {
  --sbb-icon-default-dimension: var(--sbb-size-icon-ui-small);
}

:host([data-empty][data-namespace='default'][name$='-medium']) {
  --sbb-icon-default-dimension: var(--sbb-size-icon-ui-medium);
}

:host([data-empty][data-namespace='default'][name$='-large']) {
  --sbb-icon-default-dimension: var(--sbb-size-icon-ui-large);
}

svg {
  width: var(--sbb-icon-svg-width, var(--sbb-icon-default-dimension));
  height: var(--sbb-icon-svg-height, var(--sbb-icon-default-dimension));
  stroke: var(--sbb-icon-svg-stroke-color);
  stroke-width: var(--sbb-icon-svg-stroke-width);

  &:not(.color-immutable) {
    [fill]:not([fill='none']) {
      fill: currentcolor;
    }

    [stroke]:not([stroke='none']) {
      stroke: currentcolor;
    }

    // stylelint-disable selector-not-notation
    // TODO: Maybe improve this solution in CDN Image
    & >,
    :where(:not([stroke]):not([fill])) {
      :where(path, polygon, polyline):where(:not([stroke]):not([fill])) {
        fill: currentcolor;
      }
    }
    // stylelint-enable selector-not-notation
  }
}

